another attempt to fix content wrap

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -112,7 +112,7 @@
   border-radius: $border-radius 0 0 0;
 
   @include breakpoint($x-large) {
-    padding: 5px 10px;
+    padding: 5px;
   }
 
   a {
